config/manager/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: manager
  namespace: system
spec:  
  selector:
    control-plane: controller-manager
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80 # change based on HTTP_PORT configuration
